--- a/Diamonds.ipynb
+++ b/Diamonds.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tanner Young\n",
+    "# Diamonds\n",
+    "Task 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -9,6 +25,13 @@
     "import pandas as pd\n",
     "\n",
     "diamonds = pd.read_csv('diamonds.csv', index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Display First 7 Rows"
    ]
   },
   {
@@ -166,6 +189,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Display Last 7 Rows"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -320,6 +350,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Describe Function"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -353,8 +390,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Describe Stats"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -566,13 +610,23 @@
        "max     18823.000000     10.740000     58.900000     31.800000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "diamonds.describe(include= 'all')"
+    "import pandas as pd\n",
+    "\n",
+    "diamonds = pd.read_csv('diamonds.csv', index_col=0)\n",
+    "diamonds.describe(include='all')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Unique Values"
    ]
   },
   {
@@ -602,6 +656,13 @@
     "print(\"Unique Cut Values:\", unique_cut_values)\n",
     "print(\"Unique Color Values:\", unique_color_values)\n",
     "print(\"Unique Clarity Values:\", unique_clarity_values)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Histogram"
    ]
   },
   {
