--- a/Video_Games_Young.ipynb
+++ b/Video_Games_Young.ipynb
@@ -30,12 +30,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# First 5 Rows"
+    "# **First** 5 Rows"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
        "5        11.27      8.89     10.22         1.00         31.37  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,10 +182,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!(wii.jpg)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Last 5 Rows"
+    "# **Last** 5 Rows"
    ]
   },
   {
